--- a/kohdneyms-server/pom.xml
+++ b/kohdneyms-server/pom.xml
@@ -4,9 +4,9 @@
 	<groupId>com.axolotl.kohdneyms</groupId>
 	<artifactId>kohdneyms-server</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	
+
 	<dependencies>
-			<dependency>
+		<dependency>
 			<groupId>com.google.protobuf</groupId>
 			<artifactId>protobuf-java</artifactId>
 			<version>3.0.0</version>
@@ -25,6 +25,11 @@
 			<groupId>io.grpc</groupId>
 			<artifactId>grpc-stub</artifactId>
 			<version>1.0.0</version>
+		</dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.12</version>
 		</dependency>
 	</dependencies>
 
@@ -48,9 +53,12 @@
 					<protocArtifact>com.google.protobuf:protoc:3.0.0:exe:${os.detected.classifier}</protocArtifact>
 					<pluginId>grpc-java</pluginId>
 					<pluginArtifact>io.grpc:protoc-gen-grpc-java:1.0.0:exe:${os.detected.classifier}</pluginArtifact>
+					<protoSourceRoot>${basedir}/src/main/proto</protoSourceRoot>
+					<!-- <outputDirectory>${basedir}/target/generated-sources</outputDirectory> -->
 				</configuration>
 				<executions>
 					<execution>
+						<phase>generate-sources</phase>
 						<goals>
 							<goal>compile</goal>
 							<goal>compile-custom</goal>
