--- a/pom.xml
+++ b/pom.xml
@@ -36,5 +36,11 @@
 			<artifactId>protobuf-java</artifactId>
 			<version>3.0.0</version>
 		</dependency>
+
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.12</version>
+		</dependency>
 	</dependencies>
 </project>
